--- a/projects/projects/BasicPrograms.csproj
+++ b/projects/projects/BasicPrograms.csproj
@@ -46,6 +46,7 @@
     <Compile Include="CoinFlip.cs" />
     <Compile Include="FibonocciSeries.cs" />
     <Compile Include="LeapYear.cs" />
+    <Compile Include="PowerOfTwo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReverseNumbers.cs" />
