--- a/projects/projects/BasicPrograms.csproj
+++ b/projects/projects/BasicPrograms.csproj
@@ -51,6 +51,7 @@
     <Compile Include="PowerOfTwo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuotientAndRemainder.cs" />
     <Compile Include="ReverseNumbers.cs" />
     <Compile Include="SwapNumbers.cs" />
   </ItemGroup>
