--- a/projects/projects/BasicPrograms.csproj
+++ b/projects/projects/BasicPrograms.csproj
@@ -50,6 +50,7 @@
     <Compile Include="HarmonicNumber.cs" />
     <Compile Include="LargestNumber.cs" />
     <Compile Include="LeapYear.cs" />
+    <Compile Include="PerfectNumber.cs" />
     <Compile Include="PowerOfTwo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
