--- a/projects/projects/BasicPrograms.csproj
+++ b/projects/projects/BasicPrograms.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoinFlip.cs" />
+    <Compile Include="CouponNumbers.cs" />
     <Compile Include="EvenOdd.cs" />
     <Compile Include="Factors.cs" />
     <Compile Include="FibonocciSeries.cs" />
