--- a/projects/projects/BasicPrograms.csproj
+++ b/projects/projects/BasicPrograms.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ReverseNumbers.cs" />
     <Compile Include="StopWatch.cs" />
     <Compile Include="SwapNumbers.cs" />
+    <Compile Include="VendingMachine.cs" />
     <Compile Include="VowelConsonant.cs" />
   </ItemGroup>
   <ItemGroup>
