--- a/projects/projects/BasicPrograms.csproj
+++ b/projects/projects/BasicPrograms.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CoinFlip.cs" />
     <Compile Include="CouponNumbers.cs" />
+    <Compile Include="DayOfWeek.cs" />
     <Compile Include="EvenOdd.cs" />
     <Compile Include="Factors.cs" />
     <Compile Include="FibonocciSeries.cs" />
