--- a/projects/projects/BasicPrograms.csproj
+++ b/projects/projects/BasicPrograms.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuotientAndRemainder.cs" />
     <Compile Include="ReverseNumbers.cs" />
+    <Compile Include="SquareRoot.cs" />
     <Compile Include="StopWatch.cs" />
     <Compile Include="SwapNumbers.cs" />
     <Compile Include="TemperatureConversion.cs" />
